--- a/tox.ini
+++ b/tox.ini
@@ -3,17 +3,30 @@ envlist = lint
 skipsdist = True
 
 [testenv]
-basepython = python3.5
-setenv = PYTHONHASHSEED=0
-deps = -r{toxinidir}/tests/test-requirements.txt
+setenv = VIRTUAL_ENV={envdir}
+         PYTHONHASHSEED=0
+         TERM=linux
+         LAYER_PATH={toxinidir}/layers
+         INTERFACE_PATH={toxinidir}/interfaces
+         JUJU_REPOSITORY={toxinidir}/build
+passenv = http_proxy https_proxy
+install_command =
+  pip install {opts} {packages}
+deps =
+    -r{toxinidir}/requirements.txt
+
+[testenv:build]
+basepython = python2.7
+commands =
+    charm-build --log-level DEBUG -o {toxinidir}/build src {posargs}
 
 [testenv:lint]
-commands = flake8 reactive/ tests/
+commands = flake8 src/reactive/ src/tests/
 
 [testenv:smoke]
 passenv = HOME CHARM_NAME CHARM_STORE_GROUP CHARM_BUILD_DIR
-commands = pytest tests/test_smoke.py -s -v
+commands = pytest src/tests/test_smoke.py -s -v
 
 [testenv:integration]
 passenv = HOME CHARM_NAME CHARM_STORE_GROUP CHARM_BUILD_DIR
-commands = pytest tests/test_smoke.py -s -v
+commands = pytest src/tests/test_smoke.py -s -v
